# One

./: .gitignore  check-image.js  package-lock.json  package.json  日志.txt
.github/workflows/: release.yml
cli/: cli.js
cli/scripts/: build-cli.js
cli/src/cli/tray/: tray.js
electron/: main.js  package.json
scripts/: desktop-launcher.js  generate-icons.js
src/: dashboardGuard.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.js  manifest.js
src/app/(dashboard)/dashboard/combos/: page.js
src/app/(dashboard)/dashboard/endpoint/: EndpointPageClient.js
src/app/(dashboard)/dashboard/profile/: page.js
src/app/(dashboard)/dashboard/providers/: page.js
src/app/(dashboard)/dashboard/providers/[id]/: ModelRow.js
src/app/(dashboard)/dashboard/usage/components/: ProviderTopology.js
src/app/api/auth/login/: route.js
src/app/api/auth/oidc/callback/: route.js
src/app/api/auth/oidc/test/: route.js
src/app/api/auth/status/: route.js
src/app/api/settings/: route.js
src/app/api/settings/require-login/: route.js
src/lib/auth/: dashboardSession.js
src/lib/db/: driver.js
src/lib/db/adapters/: betterSqliteAdapter.js
src/shared/components/: Button.js  Card.js  Header.js  HeaderMenu.js  Input.js  Sidebar.js
src/shared/components/layouts/: DashboardLayout.js
