[package]
name = "one-desktop"
version = "0.5.4"
description = "One Desktop - API Gateway & Proxy"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.29"
port-allocator = "0.3"
tracing = "0.1"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
